Save local changes before LFS setup

--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,9 @@ reportlab==4.4.2
 h5py>=3.8.0
 colorama>=0.4.6
 
+# Hugging Face Hub para descarga automática de modelos
+huggingface_hub>=0.19.0
+
 # ================================
 # INSTALACIÓN
 # ================================
