--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ scipy>=1.9.0
 # ================================
 # PROCESAMIENTO DE IMÁGENES
 # ================================
-opencv-python==4.12.0
+#opencv-python==4.12.0#
 Pillow==11.3.0
 
 # ================================
